force-app/main/default/objects/Subscriber_Auto_Subscription_Mapping__mdt/Subscriber_Auto_Subscription_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to evaluate automatic subscription criteria and is dependent on object type
        and functional group.</description>
    <label>Subscriber Auto Subscription Mapping</label>
    <pluralLabel>Subscriber Auto Subscription Mappings</pluralLabel>
</CustomObject>