force-app/main/default/objects/Subscriber_Auto_Subscription_Mapping__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>Select the object that this rule should correspond with.</description>
    <inlineHelpText>Select the object that this rule should correspond with.</inlineHelpText>
    <label>Related Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Subscriber_Auto_Subscription_Mappings</relationshipLabel>
    <relationshipName>Subscriber_Auto_Subscription_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>