force-app/main/default/objects/Subscriber_Auto_Subscription_Mapping__mdt/fields/Subscriptions_To_Add__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_To_Add__c</fullName>
    <description>A list of all the subscriptions that a subscriber should be added for, for this setting.</description>
    <inlineHelpText>Please add each Subscription you would like the user to be added to separated by a comma (No Spaces)</inlineHelpText>
    <label>Subscriptions To Add</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>