force-app/main/default/objects/Subscriber_Auto_Subscription_Mapping__mdt/listViews/Mappings.listView-meta.xml
<ListView>
    <fullName>Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Related_Object__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mappings</label>
</ListView>